// Apply the java plugin to add support for Java
plugins {
    id 'java'
}

// Set the Java version compatibility
sourceCompatibility = '17'
targetCompatibility = '17'

// Define the repositories to use for resolving dependencies
repositories {
    mavenCentral()
}

// Define the dependencies for the project
dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.4'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.4'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.11.4'
    testImplementation 'org.assertj:assertj-core:3.27.2'
}

test {
    useJUnitPlatform()
}